[workspace]
resolver = "2"
members = [
    "examples/fibonacci_old",
    "examples/fibonacci",
    "examples/double"
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
stwo = { git = "https://github.com/starkware-libs/stwo", branch = "dev", features = ["prover"] }
stwo-constraint-framework = { git = "https://github.com/starkware-libs/stwo", branch = "dev", features = ["prover", "std"] }
