[package]
name = "double"
version = "0.1.0"
edition = "2024"

[dependencies]
stwo = { git = "https://github.com/starkware-libs/stwo", branch = "dev", features = ["prover"] }
stwo-constraint-framework = { git = "https://github.com/starkware-libs/stwo", branch = "dev", features = ["prover", "std"] }
itertools = "0.13"
num-traits = "0.2"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }


[dev-dependencies]
test-log = "0.2"