[package]
name = "fibonacci"
version.workspace = true
edition.workspace = true

[dependencies]
stwo = { git = "https://github.com/starkware-libs/stwo", branch = "dev", features = ["prover"] }
stwo-constraint-framework = { git = "https://github.com/starkware-libs/stwo", branch = "dev", features = ["prover", "std"] }
itertools = "0.13"
num-traits = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
test-log = "0.2"